plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.spartahub'
version = '0.0.1-SNAPSHOT'
description = 'AggregateService'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

ext {
    set('springCloudVersion', "2025.0.0")
    // BOM이 버전을 찾지 못할 때를 대비하여 안정적인 Stream 버전 명시
    set('streamKafkaVersion', "4.3.0")
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

dependencies {
    // --- [1] Reactive Web (Netty 기반 비동기 서버) ---
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // --- [2] 공용 모듈 (msa-common) ---
    // 공용 모듈은 동기(Tomcat) 기반이므로, WebFlux와 충돌하는 의존성을 제거합니다.
    implementation('com.github.hiho1010:msa-common:v0.1.2') {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-web'
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
    }

    // --- [3] Spring Cloud Stream Kafka (필수) ---
    // "ClassNotFoundException: StreamBridge" 해결을 위해 명시적으로 추가
    implementation "org.springframework.cloud:spring-cloud-starter-stream-kafka:${streamKafkaVersion}"

    // --- [4] Lombok (필수) ---
    // "cannot find symbol log/getter" 해결을 위해 annotationProcessor 필수
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // 테스트 코드에서도 Lombok을 쓰기 위해 추가
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // --- [5] Test Dependencies ---
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.springframework.cloud:spring-cloud-stream-test-binder'

    // "ClassNotFound: TestChannelBinderConfiguration" 해결을 위해 추가
    testImplementation "org.springframework.cloud:spring-cloud-stream-test-binder:${streamKafkaVersion}"

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // 개발 편의 도구
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
}

tasks.named('test') {
    useJUnitPlatform()
}
